--- a/talk_Zurich.tex
+++ b/talk_Zurich.tex
@@ -166,6 +166,7 @@ red!40!yellow,
 \setcounter{framenumber}{0}
 
 \begin{frame}{Texture as important as taste}
+\tikzsetnextfilename{texture}%
 \begin{tikzpicture}[inner sep=0, callout pointer segments=3]
 \node(ishichan) {\includegraphics[height=8\baselineskip]{ishichan}};
 \node[above=of ishichan] {\includegraphics[height=8\baselineskip]{calamar}};
