Strain in appendix Gallot 2013 The simplest yoghurt

--- a/creep_beamer.tex
+++ b/creep_beamer.tex
@@ -186,7 +186,7 @@
 Any plastic event in yoghurt?
 
 \bigskip
-\movie[externalviewer]{\structure{Ultrasound velocimetry}}{Yaourt110_primary.avi} $\Rightarrow$ local velocity maps
+\movie[externalviewer]{\structure{Ultrasound velocimetry}}{Yaourt110_primary.avi} $\Rightarrow$ local velocity maps\\\hfill\textit{\footnotesize T. Gallot et al., Rev. Sci. Instrum. 84, 045107 (2013)}
 \begin{itemize}
 	\item homogeneous \movie[externalviewer]{strain field}{Yaourt110_profils.avi} (no wall slip, no shear band)
 	\item if present, plastic events are below our resolution (a few \si{\micro\metre})
