Use Science citation style

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -1,5 +1,4 @@
-\documentclass[twocolumn,superscriptaddress,showpacs,preprintnumbers,
-amsmath,amssymb,prl]{revtex4-1}
+\documentclass[twocolumn,superscriptaddress,showpacs,preprintnumbers, amsmath,amssymb,prl]{revtex4-1}
 \usepackage[utf8]{inputenc}
 
 \usepackage{graphicx} 
@@ -10,6 +9,7 @@ amsmath,amssymb,prl]{revtex4-1}
 \usepackage{bm}
 %\usepackage{dcolumn,ulem}
 \usepackage{amsfonts}
+
 
 \definecolor{Main}{rgb}{1, 0.57, 0}
 \definecolor{Accent1}{rgb}{1,0.28,0}
@@ -234,7 +234,7 @@ Home made optical cells are composed of a slide (RS) and a cover slip (Menzel-Gl
 Data shown in Figure~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar). For every gel composition we monitor the gelation by small amplitude oscillations (strain 0.1\%, frequency \SI{1}{\hertz}) and estimate the flexural modulus $B$ from the maximum value of the shear modulus $G^\prime$ as $B=2G^\prime/(1-\nu)$ taking $\nu=0.3$ for the Poisson ratio, a value typical of a spongy network~\cite{Greaves2011}.
 Permeability is measured using a protocol found in \cite{VanDijk1986}, see Supplementary Method and Supplementary Figure~\ref{fig:permeability}. The amount of free casein protein present in the gel during the GDL acidification process is measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
 
-\bibliographystyle{pnas2009}
+\bibliographystyle{Science}
 \bibliography{Yaourt}
 
 \paragraph*{Acknowledgements}
